# soullink-levelcap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  caps.example.txt
.github/workflows/: ci.yml  release.yml
data/: species_growth.json
docs/: MITSPIELER.md  OFFSETS.md  SETUP.md  TROUBLESHOOTING.md  WINDOWS_AGENT_BRIEF.md
scripts/: fetch_growth_rates.py
src/: caps.rs  daemon.rs  lib.rs  main.rs  setup.rs  species_data.rs
src/emulator/: citra.rs  mod.rs
src/game/: badges.rs  decrypt.rs  growth_rates.rs  mod.rs  party.rs
src/memory/: linux.rs  mod.rs  windows.rs
tests/: caps_parser_test.rs  fcram_diagnostic.rs  growth_rates_test.rs  memory_layout_test.rs  write_exp_live.rs
