[package]
name = "soullink-levelcap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Soullink Level-Cap Daemon für Pokemon Alpha Saphir auf Citra"
repository = "https://github.com/IamGroot212/soullink-levelcap"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.32"
phf = { version = "0.11", features = ["macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
phf_codegen = "0.11"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
